# blueprinter

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  test_mermaid.mmd
.github/workflows/: release.yml
docs/: overview.md  poc.md  roadmap.md
fonts/: README.md
scripts/: mermaid-poc.sh
src/: jitter.rs  lib.rs  main.rs  render.rs
src/svg/: chalk.rs  export.rs  filter.rs  manga.rs  marker.rs  mod.rs  parser.rs  primitive.rs  sumi.rs  text_to_path.rs  theme.rs  transform.rs  watercolor.rs
tests/: jitter.rs  poc_assets.rs  svg_parse.rs  transform.rs
tests/fixtures/mermaid/: er-diagram.mmd  flowchart.mmd  sequence.mmd
